<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <DUT Name="ST_Gwrx" Id="{df16bffd-48f3-4e27-b6ea-d01bb19c26d2}">
    <Declaration><![CDATA[TYPE ST_Gwrx :
STRUCT
	TimeRec	: STRING;//DATE_AND_TIME ;
	Chan : DINT ;
	Rfch : DINT ;
	Rssi : DINT ;
	Lsnr : REAL ;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>